fix: Ajustando los hiperparametros del modelo en el notebook 05 (closes #9)

--- a/notebooks/05_training_setup.ipynb
+++ b/notebooks/05_training_setup.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "15910b78",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "4740d977",
    "metadata": {},
    "outputs": [],
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "ce61dd3f",
    "metadata": {},
    "outputs": [],
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "6f65495b",
    "metadata": {},
    "outputs": [
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "4904dbb9",
    "metadata": {},
    "outputs": [],
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "2fdd89db",
    "metadata": {},
    "outputs": [
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "ae141a14",
    "metadata": {},
    "outputs": [
@@ -448,7 +448,7 @@
      "output_type": "stream",
      "text": [
       "Device: cpu\n",
-      "Batch Size: 32\n",
+      "Batch Size: 16\n",
       "Learning Rate: 0.0005\n"
      ]
     }
@@ -466,7 +466,7 @@
     "DEC_DROPOUT = 0.3\n",
     "\n",
     "LEARNING_RATE = 0.0005 # tasa de aprendizaje\n",
-    "BATCH_SIZE = 32       \n",
+    "BATCH_SIZE = 16       \n",
     "N_EPOCHS = 10         # Numero de epocas\n",
     "CLIP = 1              # Gradient clipping \n",
     "\n",
@@ -478,8 +478,8 @@
     "torch.cuda.manual_seed(SEED)\n",
     "torch.backends.cudnn.deterministic = True \n",
     "\n",
-    "MAX_TOKENS_ARTICLE = 1200 \n",
-    "MAX_TOKENS_HIGHLIGHT = 130  \n",
+    "MAX_TOKENS_ARTICLE = 800 \n",
+    "MAX_TOKENS_HIGHLIGHT = 100  \n",
     "\n",
     "\n",
     "print(f\"Device: {DEVICE}\")\n",
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "faeee3a3",
    "metadata": {},
    "outputs": [
@@ -522,7 +522,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
+   "id": "d6762a23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df_filtered = train_df_filtered[\n",
+    "    (train_df_filtered['article'].str.len() <= 1000) & \n",
+    "    (train_df_filtered['highlights'].str.len() <= 150)\n",
+    "]\n",
+    "validation_df_filtered = validation_df_filtered[\n",
+    "    (validation_df_filtered['article'].str.len() <= 1000) & \n",
+    "    (validation_df_filtered['highlights'].str.len() <= 150)\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "fed62d76",
    "metadata": {},
    "outputs": [
@@ -531,12 +548,12 @@
      "output_type": "stream",
      "text": [
       "Datasets y DataLoaders creados.\n",
-      "  Tamaño Dataset Entrenamiento: 286766\n",
-      "  Tamaño Dataset Validación: 13353\n",
-      "  Número batches Entrenamiento: 8962\n",
-      "  Número batches Validación: 418\n",
-      "  Shape src_batch: torch.Size([32, 1200])\n",
-      "  Shape trg_batch: torch.Size([32, 130])\n"
+      "  Tamaño Dataset Entrenamiento: 662\n",
+      "  Tamaño Dataset Validación: 35\n",
+      "  Número batches Entrenamiento: 42\n",
+      "  Número batches Validación: 3\n",
+      "  Shape src_batch: torch.Size([16, 205])\n",
+      "  Shape trg_batch: torch.Size([16, 40])\n"
      ]
     }
    ],
@@ -578,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "becccca2",
    "metadata": {},
    "outputs": [
@@ -614,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "7fc8ff37",
    "metadata": {},
    "outputs": [
@@ -643,7 +660,7 @@
        ")"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "24751860",
    "metadata": {},
    "outputs": [
@@ -706,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "02682453",
    "metadata": {},
    "outputs": [
@@ -733,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "19bf3a7b",
    "metadata": {},
    "outputs": [],
@@ -755,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "f02053fa",
    "metadata": {},
    "outputs": [],
@@ -809,8 +826,8 @@
     "        # Acumulamos las perdidas\n",
     "        epoch_loss += loss.item()\n",
     "\n",
-    "        # Imprimimos el progreso cada 100 batches\n",
-    "        if (i + 1) % 100 == 0:\n",
+    "        # Imprimimos el progreso cada 10 batches\n",
+    "        if (i + 1) % 10 == 0:\n",
     "            print(f\"  Batch {i+1}/{len(iterator)} - Loss: {loss.item():.4f}\")\n",
     "\n",
     "    return epoch_loss / len(iterator)"
@@ -818,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "909772c3",
    "metadata": {},
    "outputs": [],
@@ -869,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "8e0b7148",
    "metadata": {},
    "outputs": [
@@ -879,7 +896,81 @@
      "text": [
       "\n",
       "--- Iniciando Entrenamiento para 10 epocas ---\n",
-      "\n"
+      "\n",
+      "  Batch 10/42 - Loss: 8.5796\n",
+      "  Batch 20/42 - Loss: 7.7980\n",
+      "  Batch 30/42 - Loss: 7.4291\n",
+      "  Batch 40/42 - Loss: 7.4035\n",
+      "\t** Modelo guardado en época 1 (Mejor valid loss) **\n",
+      "Epoch: 01 | Tiempo: 3m 30s\n",
+      "\tTrain Loss: 8.233 | Train PPL: 3763.960\n",
+      "\t Val. Loss: 7.732 |  Val. PPL: 2280.050\n",
+      "  Batch 10/42 - Loss: 7.0088\n",
+      "  Batch 20/42 - Loss: 7.0727\n",
+      "  Batch 30/42 - Loss: 6.7724\n",
+      "  Batch 40/42 - Loss: 6.8996\n",
+      "Epoch: 02 | Tiempo: 3m 29s\n",
+      "\tTrain Loss: 6.897 | Train PPL: 988.901\n",
+      "\t Val. Loss: 7.803 |  Val. PPL: 2447.268\n",
+      "  Batch 10/42 - Loss: 6.4383\n",
+      "  Batch 20/42 - Loss: 6.8330\n",
+      "  Batch 30/42 - Loss: 6.8197\n",
+      "  Batch 40/42 - Loss: 6.8161\n",
+      "Epoch: 03 | Tiempo: 3m 33s\n",
+      "\tTrain Loss: 6.699 | Train PPL: 811.290\n",
+      "\t Val. Loss: 7.787 |  Val. PPL: 2408.011\n",
+      "  Batch 10/42 - Loss: 6.6995\n",
+      "  Batch 20/42 - Loss: 6.5541\n",
+      "  Batch 30/42 - Loss: 6.5245\n",
+      "  Batch 40/42 - Loss: 6.7504\n",
+      "Epoch: 04 | Tiempo: 3m 29s\n",
+      "\tTrain Loss: 6.609 | Train PPL: 741.898\n",
+      "\t Val. Loss: 7.920 |  Val. PPL: 2752.278\n",
+      "  Batch 10/42 - Loss: 6.5331\n",
+      "  Batch 20/42 - Loss: 6.4888\n",
+      "  Batch 30/42 - Loss: 6.3449\n",
+      "  Batch 40/42 - Loss: 6.6675\n",
+      "Epoch: 05 | Tiempo: 3m 30s\n",
+      "\tTrain Loss: 6.497 | Train PPL: 663.197\n",
+      "\t Val. Loss: 7.952 |  Val. PPL: 2842.078\n",
+      "  Batch 10/42 - Loss: 6.3644\n",
+      "  Batch 20/42 - Loss: 6.5580\n",
+      "  Batch 30/42 - Loss: 6.3582\n",
+      "  Batch 40/42 - Loss: 6.4880\n",
+      "Epoch: 06 | Tiempo: 3m 30s\n",
+      "\tTrain Loss: 6.406 | Train PPL: 605.625\n",
+      "\t Val. Loss: 8.010 |  Val. PPL: 3011.336\n",
+      "  Batch 10/42 - Loss: 6.0826\n",
+      "  Batch 20/42 - Loss: 6.1568\n",
+      "  Batch 30/42 - Loss: 6.3065\n",
+      "  Batch 40/42 - Loss: 6.5178\n",
+      "Epoch: 07 | Tiempo: 3m 31s\n",
+      "\tTrain Loss: 6.313 | Train PPL: 551.735\n",
+      "\t Val. Loss: 8.004 |  Val. PPL: 2992.000\n",
+      "  Batch 10/42 - Loss: 6.1198\n",
+      "  Batch 20/42 - Loss: 6.1820\n",
+      "  Batch 30/42 - Loss: 6.3982\n",
+      "  Batch 40/42 - Loss: 6.3662\n",
+      "Epoch: 08 | Tiempo: 3m 29s\n",
+      "\tTrain Loss: 6.196 | Train PPL: 490.785\n",
+      "\t Val. Loss: 8.126 |  Val. PPL: 3381.166\n",
+      "  Batch 10/42 - Loss: 6.1304\n",
+      "  Batch 20/42 - Loss: 6.1559\n",
+      "  Batch 30/42 - Loss: 5.8532\n",
+      "  Batch 40/42 - Loss: 6.1505\n",
+      "Epoch: 09 | Tiempo: 3m 29s\n",
+      "\tTrain Loss: 6.059 | Train PPL: 427.812\n",
+      "\t Val. Loss: 8.142 |  Val. PPL: 3436.230\n",
+      "  Batch 10/42 - Loss: 5.8845\n",
+      "  Batch 20/42 - Loss: 6.0938\n",
+      "  Batch 30/42 - Loss: 6.2706\n",
+      "  Batch 40/42 - Loss: 5.9264\n",
+      "Epoch: 10 | Tiempo: 3m 29s\n",
+      "\tTrain Loss: 5.958 | Train PPL: 386.859\n",
+      "\t Val. Loss: 8.242 |  Val. PPL: 3797.614\n",
+      "\n",
+      "--- Entrenamiento Finalizado ---\n",
+      "Mejor Validation Loss alcanzado: 7.732\n"
      ]
     }
    ],
